bpo-43555: Report the column offset for invalid line continuation character (GH-24939)